# AED_Project

./: CMakeLists.txt  main.cpp
Data/: flights.txt  luggages.txt  planes.txt  tickets.txt
docs/html/: index.html
docs/latex/: refman.tex
menus/: bookingMenu.cpp  bookingMenu.h  bossMenu.cpp  bossMenu.h  clientMenu.cpp  clientMenu.h  flightsMenu.cpp  flightsMenu.h  mainMenu.cpp  mainMenu.h  reservationMenu.cpp  reservationMenu.h  staffmenu.cpp  staffmenu.h
src/: Plane.h  bstt.cpp  bstt.h  flight.cpp  flight.h  luggage.cpp  luggage.h  passenger.cpp  passenger.h  plane.cpp  plane.h  planes.h  service.cpp  service.h  stcp.cpp  stcp.h  ticket.cpp  ticket.h  worker.cpp  worker.h
utilities/: date.cpp  date.h  os.h  time.cpp  time.h
